--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,8 +4,17 @@
 //
 
 // Colors
-$blue: #4183C4;
-$text-color: rgb(60,60,60);
+$bg-color: rgb(250,248,245);
+
+$text-color: rgb(20,50,80);
+$link-color: rgb(0,110,230);
+$link-color--active: rgb(0,80,180);
+$link-color--visited: rgb(110,0,200);
+
+$lightest-color: rgb(240,238,235);
+$lighter-color: rgb(230,228,225);
+$light-color: rgb(220,218,215);
+$medium-color: rgb(180,178,175);
 
 // Grays
 $black: #000;
@@ -16,10 +25,10 @@ $lightGray: #eee;
 $white: #fff;
 
 // Font stacks
-$text-font: serif;
-$display-font: serif;
-$alt-font: sans-serif;
-$monospace-font: monospace;
+$text-font: 'Alegreya', Georgia, serif;
+$display-font: 'Alegreya SC', Georgia, serif;
+$alt-font: 'Alegreya Sans', Arial, sans-serif;
+$mono-font: 'Liberation Mono', monospace;
 
 // Mobile breakpoints
 @mixin mobile {
