--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
       {% for tag in site.tags %}
         {% assign t = tag | first %}
         {% assign posts = tag | last %}
-        <li>{{t | downcase | replace:" ","-" }} <span>{{ posts | size }}</span></li>
+        <li><a href="{{ site.baseurl }}/tag/{{ t }}">{{t | downcase | replace:" ","-" }} <span>{{ posts | size }}</span></a></li>
       {% endfor %}
     </ul>
   </div>
