--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,22 @@
 layout: default
 ---
 
+<!-- Tag system without plugin -->
+{% assign post = page %}
+{% if post.tags.size > 0 %}
+  {% capture tags_content %}Posted with {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}: {% endcapture %}
+  {% for post_tag in post.tags %}
+    {% assign tag = site.data.tags[post_tag] %}
+    {% if tag %}
+      {% capture tags_content_temp %}{{ tags_content }}<a href="/tags/{{ tag.slug }}/">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
+      {% assign tags_content = tags_content_temp %}
+    {% endif %}
+  {% endfor %}
+{% else %}
+    {% assign tags_content = '' %}
+{% endif %}
+
+<!-- Post layout -->
 <article class="post">
   <h1 class="post-title"><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h1>
 
@@ -21,6 +37,7 @@ layout: default
         <li><a href="{{ site.baseurl }}/tag/{{ t }}">{{t | downcase | replace:" ","-" }} <span>{{ posts | size }}</span></a></li>
       {% endfor %}
     </ul>
+    <p id="post-meta">{{ tags_content }}</p>
   </div>
 
   {% include disqus.html %}
