--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,6 +5,7 @@ $text-color: rgb(50,40,40);
 $link-color: rgb(0,110,230);
 $link-color--active: rgb(0,80,180);
 $link-color--visited: rgb(110,0,200);
+$quote-color: rgb(120,110,110);
 
 $lightest-color: rgb(240,238,235);
 $lighter-color: rgb(230,228,225);
