--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,14 @@
 layout: default
 ---
 
-<!-- Tag system without plugin -->
+<!-- Tags system without plugin -->
 {% assign post = page %}
 {% if post.tags.size > 0 %}
-  {% capture tags_content %}Posted with {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}: {% endcapture %}
+  {% capture tags_content %}{% endcapture %}
   {% for post_tag in post.tags %}
     {% assign tag = site.data.tags[post_tag] %}
     {% if tag %}
-      {% capture tags_content_temp %}{{ tags_content }}<a href="/tags/{{ tag.slug }}/">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
+      {% capture tags_content_temp %}{{ tags_content }}<a href="/tags/{{ tag.name }}/">{{ tag.name }}</a>{% if forloop.last == false %}{% endif %}{% endcapture %}
       {% assign tags_content = tags_content_temp %}
     {% endif %}
   {% endfor %}
@@ -20,25 +20,11 @@ layout: default
 <!-- Post layout -->
 <article class="post">
   <h1 class="post-title"><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h1>
-
   <div class="entry">
     {{ content }}
   </div>
-
-  <div class="post-date">
-    {{ page.date | date: "%A, %e %B %Y" }} - {{ page.date | date: "%H:%M" }}
+  <div class="post-metadata">
+    <p class="post-date">{{ page.date | date: "%A, %e %B %Y" }} - {{ page.date | date: "%H:%M" }}</p>
+    <p class="post-tags">{{ tags_content }}</p>
   </div>
-
-  <div class="post-tags">
-    <ul>
-      {% for tag in site.tags %}
-        {% assign t = tag | first %}
-        {% assign posts = tag | last %}
-        <li><a href="{{ site.baseurl }}/tag/{{ t }}">{{t | downcase | replace:" ","-" }} <span>{{ posts | size }}</span></a></li>
-      {% endfor %}
-    </ul>
-    <p id="post-meta">{{ tags_content }}</p>
-  </div>
-
-  {% include disqus.html %}
 </article>
