--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -1,13 +1,15 @@
 ---
 layout: default
 ---
-<h1>Articles by tag :{{ page.tag }}</h1>
+<h1>{{ page.tag }}</h1>
 <div>
-    {% if site.tags[page.tag] %}
-        {% for post in site.tags[page.tag] %}
-            <a href="{{ post.url }}/">{{ post.title }}</a>
-        {% endfor %}
-    {% else %}
-        <p>There are no posts for this tag.</p>
-    {% endif %}
+  {% if site.tags[page.tag] %}
+  <ul>
+    {% for post in site.tags[page.tag] %}
+      <li><a href="{{ post.url }}/">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+  {% else %}
+    <p>Aucun post n'utilise le tag {{ page.tag }}</p>
+  {% endif %}
 </div>
