--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,9 +1,10 @@
 h1, h2, h3, h4, h5, h6 {
+  padding: 2.8rem 0 1.6rem;
   font-family: $display-font;
 }
 
 a {
-  padding: .25em 0;
+  padding: .5rem 0;
   font-family: $alt-font;
   color: $text-color;
   text-decoration: none;
@@ -22,10 +23,11 @@ a {
 
 .post-title {
   padding: 0;
-  font-size: 2em;
+  font-size: 4rem;
+  line-height: 4.4rem;
 
   a {
-    padding: .075em 0;
+    padding: .3rem 0;
     font-family: $display-font;
     color: $text-color;
     text-decoration: none;
@@ -46,30 +48,29 @@ a {
 }
 
 h1 {
-  padding: 1em 0 .5em;
-  font-size: 1.5em;
+  font-size: 2.8rem;
+  line-height: 3.2rem;
 }
 
 h2 {
-  padding: 1em 0 .5em;
-  font-size: 1.25em;
+  font-size: 2.4rem;
+  line-height: 3rem;
 }
 
 h3 {
-  padding: 1em 0 .5em;
+  line-height: 2.8rem;
 }
 
 h4 {
-  padding: 1em 0 .5em;
+  line-height: 2.8rem;
   font-style: italic;
 }
 
 p {
-  padding: 0 0 .5em;
-  font-size: 1em;
+  padding: 0 0 1rem;
 
   a {
-    padding: .25em 0;
+    padding: .5rem 0;
     font-family: $alt-font;
     color: $text-color;
     text-decoration: none;
@@ -119,7 +120,18 @@ strong, b {
   font-weight: bold;
 }
 
+blockquote {
+  padding: 1.6rem 0 .6rem 8rem;
+  font-style: italic;
+  color: $quote-color;
+
+  p a {
+    color: $quote-color;
+  }
+}
+
 img {
+  margin: 1.6rem 0 .6rem;
   max-width: 100%;
 }
 
@@ -128,11 +140,50 @@ img {
   max-width: none;
 }
 
+// Post Metadata
+.post-metadata {
+  margin: 2rem 0 0;
+}
+
 .post-date {
-  margin: 2em 0 0;
-  font-size: .75em;
+  margin: 1rem 0 0;
+  font-size: 1.6rem;
   font-family: $mono-font;
   color: $mediumDark-color;
+}
+
+.post-tags {
+  margin: 1rem 0 0;
+
+  a {
+    margin: 0 .5rem;
+    padding: .8rem 1rem .7rem;
+    font-family: $mono-font;
+    font-size: 1.4rem;
+    color: $medium-color;
+    border: 1px solid $lighter-color;
+    border-radius: .2rem;
+
+    &:hover {
+      color: $mediumDark-color;
+      background-color: $light-color;
+      border: 1px solid $light-color;
+    }
+
+    &:active {
+      color: $lightest-color;
+      background-color: $medium-color;
+      border: 1px solid $medium-color;
+    }
+
+    &:first-child {
+      margin-left: 0;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
 
 // Specify the color of the selection
@@ -145,17 +196,6 @@ img {
   background: $lighter-color;
 }
 
-.post {
-  blockquote {
-    margin: 1.8em .8em;
-    border-left: 2px solid $gray;
-    padding: 0.1em 1em;
-    color: $gray;
-    font-size: 22px;
-    font-style: italic;
-  }
-
-  .comments {
-    margin-top: 1em;
-  }
+.comments {
+  margin-top: 1em;
 }
