style - code blocks
code blocks display and syntax highlight custom colors

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -123,10 +123,10 @@ strong, b {
 blockquote {
   padding: 1.6rem 0 .6rem 8rem;
   font-style: italic;
-  color: $quote-color;
+  color: $text-color--light;
 
   p a {
-    color: $quote-color;
+    color: $text-color--light;
   }
 }
 
