--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -4,9 +4,8 @@
 
 .masthead {
   padding: 1em 0;
-  border-bottom: 1px solid $lightGray;
 
-  @include mobile {
+  @include breakpoint-s {
     text-align: center;
   }
 }
@@ -17,7 +16,7 @@
   height: 70px;
   margin-right: 15px;
 
-  @include mobile {
+  @include breakpoint-s {
     float: none;
     display: block;
     margin: 0 auto;
@@ -31,7 +30,7 @@
 .site-info {
   float: left;
 
-  @include mobile {
+  @include breakpoint-s {
     float: none;
     display: block;
     margin: 0 auto;
@@ -53,7 +52,7 @@
   color: $gray;
   font-size: 16px;
 
-  @include mobile {
+  @include breakpoint-s {
     margin: 3px 0;
   }
 }
@@ -64,7 +63,7 @@ nav {
   font-family: $display-font;
   font-size: 18px;
 
-  @include mobile {
+  @include breakpoint-s {
     float: none;
     margin-top: 9px;
     display: block;
@@ -78,7 +77,7 @@ nav {
     font-weight: 300;
     letter-spacing: 1px;
 
-    @include mobile {
+    @include breakpoint-s {
       margin: 0 10px;
       color: $link-color;
     }
