--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,10 +1,17 @@
 h1, h2, h3, h4, h5, h6 {
   padding: 2.8rem 0 1.6rem;
   font-family: $display-font;
+
+  @include breakpoint-m {
+    padding: 2.4rem 0 1.2rem;
+  }
+  @include breakpoint-xs {
+    padding: 1.6rem 0 0.8rem;
+  }
 }
 
 a {
-  padding: .5rem 0;
+  padding: 0.5rem 0;
   font-family: $alt-font;
   color: $text-color;
   text-decoration: none;
@@ -26,8 +33,13 @@ a {
   font-size: 4rem;
   line-height: 4.4rem;
 
+  @include breakpoint-xs {
+    font-size: 3.2rem;
+    line-height: 3.6rem;
+  }
+
   a {
-    padding: .3rem 0;
+    padding: 0;
     font-family: $display-font;
     color: $text-color;
     text-decoration: none;
@@ -50,19 +62,54 @@ a {
 h1 {
   font-size: 2.8rem;
   line-height: 3.2rem;
+
+  @include breakpoint-s {
+    font-size: 2.6rem;
+    line-height: 3rem;
+  }
+  @include breakpoint-xs {
+    font-size: 2.4rem;
+    line-height: 2.8rem;
+  }
+  @include breakpoint-xxs {
+    font-size: 2.2rem;
+    line-height: 2.6rem;
+  }
 }
 
 h2 {
   font-size: 2.4rem;
   line-height: 3rem;
+
+  @include breakpoint-s {
+    font-size: 2.2rem;
+    line-height: 2.8rem;
+  }
+  @include breakpoint-xs {
+    font-size: 2rem;
+    line-height: 2.6rem;
+  }
+  @include breakpoint-xxs {
+    font-size: 1.8rem;
+    line-height: 2.4rem;
+  }
 }
 
-h3 {
+h3, h4 {
   line-height: 2.8rem;
+
+  @include breakpoint-s {
+    line-height: 2.6rem;
+  }
+  @include breakpoint-xs {
+    line-height: 2.4rem;
+  }
+  @include breakpoint-xxs {
+    line-height: 2.2rem;
+  }
 }
 
 h4 {
-  line-height: 2.8rem;
   font-style: italic;
 }
 
@@ -70,7 +117,7 @@ p {
   padding: 0 0 1rem;
 
   a {
-    padding: .5rem 0;
+    padding: 0.4rem 0;
     font-family: $alt-font;
     color: $text-color;
     text-decoration: none;
@@ -88,12 +135,63 @@ p {
       background-color: $lighter-color;
       border-bottom: 2px solid $link-color--active;
     }
+
+    @include breakpoint-s {
+      padding: 0.32rem 0;
+    }
+    @include breakpoint-xs {
+      padding: 0.24rem 0;
+    }
+    @include breakpoint-xxs {
+      padding: 0.16rem 0;
+    }
   }
 }
 
 ul, ol {
-  margin: 15px 0;
-  padding-left: 30px;
+  margin: 0 0 0.8rem 0;
+  padding-left: 4.8rem;
+  line-height: 3.2rem;
+
+  @include breakpoint-s {
+    margin: 0 0 0.6rem 0;
+    padding-left: 4.2rem;
+    line-height: 3rem;
+  }
+  @include breakpoint-xs {
+    margin: 0 0 0.4rem 0;
+    padding-left: 3.6rem;
+    line-height: 2.8rem;
+  }
+  @include breakpoint-xxs {
+    margin: 0 0 0.2rem 0;
+    padding-left: 3rem;
+    line-height: 2.6rem;
+  }
+
+  ul, ol {
+    color: $text-color--light;
+
+    ul, ol {
+      color: $text-color--lighter;
+
+      ul, ol {
+        color: $text-color--lightest;
+      }
+    }
+  }
+
+  li {
+    padding-top: 0.8rem;
+
+    @include breakpoint-xs {
+      padding-top: 0.4rem;
+    }
+  }
+
+  li:first-child, ul li, ol li {
+    padding-top: 0;
+  }
 }
 
 ul {
@@ -121,9 +219,19 @@ strong, b {
 }
 
 blockquote {
-  padding: 1.6rem 0 .6rem 8rem;
+  padding: 1.6rem 0 0.8rem 4.8rem;
   font-style: italic;
   color: $text-color--light;
+
+  @include breakpoint-s {
+    padding: 1.6rem 0 0.8rem 4.2rem;
+  }
+  @include breakpoint-xs {
+    padding: 0.8rem 0 0.4rem 3.6rem;
+  }
+  @include breakpoint-xxs {
+    padding: 0.8rem 0 0.4rem 3rem;
+  }
 
   p a {
     color: $text-color--light;
@@ -131,7 +239,7 @@ blockquote {
 }
 
 img {
-  margin: 1.6rem 0 .6rem;
+  margin: 1.6rem 0 0.8rem;
   max-width: 100%;
 }
 
@@ -149,20 +257,26 @@ img {
   margin: 1rem 0 0;
   font-size: 1.6rem;
   font-family: $mono-font;
-  color: $mediumDark-color;
+  color: $medium-color;
+
+  @include breakpoint-xs {
+    font-size: 1.4rem;
+  }
 }
 
 .post-tags {
   margin: 1rem 0 0;
 
   a {
-    margin: 0 .5rem;
-    padding: .8rem 1rem .7rem;
+    margin: 0 0.5rem;
+    padding: 0.8rem 1rem 0.7rem;
     font-family: $mono-font;
     font-size: 1.4rem;
+    line-height: 4.2rem;
     color: $medium-color;
     border: 1px solid $lighter-color;
-    border-radius: .2rem;
+    border-radius: 0.2rem;
+    word-break: break-all;
 
     &:hover {
       color: $mediumDark-color;
@@ -186,14 +300,14 @@ img {
   }
 }
 
-// Specify the color of the selection
+// Specify the color of the text selection
 ::-moz-selection {
-  color: $text-color;
-  background: $lighter-color;
+  color: $lightest-color;
+  background: $text-color;
 }
 ::selection {
-  color: $text-color;
-  background: $lighter-color;
+  color: $lightest-color;
+  background: $text-color;
 }
 
 .comments {
