--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -38,7 +38,6 @@ $lightGray: #eee;
 $white: #fff;
 
 // Fonts
-$text-font: 'Alegreya', Georgia, serif;
-$display-font: 'Alegreya Sans SC', Georgia, serif;
-$alt-font: 'Alegreya Sans', Arial, sans-serif;
-$mono-font: 'Liberation Mono', monospace;
+$text-font: 'Rubik', Arial, sans-serif;
+$display-font: 'Space Mono', Arial, sans-serif;
+$mono-font: 'Space Mono', monospace;
