--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ layout: default
     {{ content }}
   </div>
   <div class="post-metadata">
-    <p class="post-date">{{ page.date | date: "%A, %e %B %Y" }} - {{ page.date | date: "%H:%M" }}</p>
+    <p class="post-date">{{ page.date | date: "%e %B %Y" }} - {{ page.date | date: "%H:%M" }}</p>
     <p class="post-tags">{{ tags_content }}</p>
   </div>
 </article>
