--- a/_sass/_fonts.scss
+++ b/_sass/_fonts.scss
@@ -5,151 +5,123 @@
 
 
 /* text-font */
-// Alegreya Regular
+// Regular
 @font-face {
-  font-family: 'Alegreya';
-  src: url('fonts/Alegreya-Regular.eot'); /* IE9 Compat Modes */
-  src: url('fonts/Alegreya-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/Alegreya-Regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/Alegreya-Regular.woff') format('woff'), /* Pretty Modern Browsers */
-       url('fonts/Alegreya-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('fonts/Alegreya-Regular.svg#svgFontName') format('svg'); /* Legacy iOS */
-  font-weight: 400;
+  font-family: 'Rubik';
+  src: url('fonts/Rubik-Medium.eot'); /* IE9 Compat Modes */
+  src: url('fonts/Rubik-Medium.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/Rubik-Medium.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/Rubik-Medium.woff') format('woff'), /* Pretty Modern Browsers */
+       url('fonts/Rubik-Medium.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('fonts/Rubik-Medium.svg#svgFontName') format('svg'); /* Legacy iOS */
+  font-weight: 500;
   font-style: normal;
 }
 
-// Alegreya Italic
+// Italic
 @font-face {
-  font-family: 'Alegreya';
-  src: url('fonts/Alegreya-Italic.eot'); /* IE9 Compat Modes */
-  src: url('fonts/Alegreya-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/Alegreya-Italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/Alegreya-Italic.woff') format('woff'), /* Pretty Modern Browsers */
-       url('fonts/Alegreya-Italic.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('fonts/Alegreya-Italic.svg#svgFontName') format('svg'); /* Legacy iOS */
-  font-weight: 400;
+  font-family: 'Rubik';
+  src: url('fonts/Rubik-MediumItalic.eot'); /* IE9 Compat Modes */
+  src: url('fonts/Rubik-MediumItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/Rubik-MediumItalic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/Rubik-MediumItalic.woff') format('woff'), /* Pretty Modern Browsers */
+       url('fonts/Rubik-MediumItalic.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('fonts/Rubik-MediumItalic.svg#svgFontName') format('svg'); /* Legacy iOS */
+  font-weight: 500;
   font-style: italic;
 }
 
-// Alegreya Bold
+// Bold
 @font-face {
-  font-family: 'Alegreya';
-  src: url('fonts/Alegreya-Bold.eot'); /* IE9 Compat Modes */
-  src: url('fonts/Alegreya-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/Alegreya-Bold.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/Alegreya-Bold.woff') format('woff'), /* Pretty Modern Browsers */
-       url('fonts/Alegreya-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('fonts/Alegreya-Bold.svg#svgFontName') format('svg'); /* Legacy iOS */
+  font-family: 'Rubik';
+  src: url('fonts/Rubik-Bold.eot'); /* IE9 Compat Modes */
+  src: url('fonts/Rubik-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/Rubik-Bold.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/Rubik-Bold.woff') format('woff'), /* Pretty Modern Browsers */
+       url('fonts/Rubik-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('fonts/Rubik-Bold.svg#svgFontName') format('svg'); /* Legacy iOS */
   font-weight: 700;
   font-style: normal;
 }
 
-// Alegreya Bold Italic
+// Bold Italic
 @font-face {
-  font-family: 'Alegreya';
-  src: url('fonts/Alegreya-BoldItalic.eot'); /* IE9 Compat Modes */
-  src: url('fonts/Alegreya-BoldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/Alegreya-BoldItalic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/Alegreya-BoldItalic.woff') format('woff'), /* Pretty Modern Browsers */
-       url('fonts/Alegreya-BoldItalic.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('fonts/Alegreya-BoldItalic.svg#svgFontName') format('svg'); /* Legacy iOS */
+  font-family: 'Rubik';
+  src: url('fonts/Rubik-BoldItalic.eot'); /* IE9 Compat Modes */
+  src: url('fonts/Rubik-BoldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/Rubik-BoldItalic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/Rubik-BoldItalic.woff') format('woff'), /* Pretty Modern Browsers */
+       url('fonts/Rubik-BoldItalic.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('fonts/Rubik-BoldItalic.svg#svgFontName') format('svg'); /* Legacy iOS */
   font-weight: 700;
   font-style: italic;
 }
 
 
 /* display-font */
-// Regular
+// Bold Italic
 @font-face {
-  font-family: 'Alegreya Sans SC';
-  src: url('fonts/AlegreyaSansSC-Regular.eot'); /* IE9 Compat Modes */
-  src: url('fonts/AlegreyaSansSC-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/AlegreyaSansSC-Regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/AlegreyaSansSC-Regular.woff') format('woff'), /* Pretty Modern Browsers */
-       url('fonts/AlegreyaSansSC-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('fonts/AlegreyaSansSC-Regular.svg#svgFontName') format('svg'); /* Legacy iOS */
-  font-weight: 400;
-  font-style: normal;
-}
-
-// Regular Italic
-@font-face {
-  font-family: 'Alegreya Sans SC';
-  src: url('fonts/AlegreyaSansSC-Italic.eot'); /* IE9 Compat Modes */
-  src: url('fonts/AlegreyaSansSC-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/AlegreyaSansSC-Italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/AlegreyaSansSC-Italic.woff') format('woff'), /* Pretty Modern Browsers */
-       url('fonts/AlegreyaSansSC-Italic.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('fonts/AlegreyaSansSC-Italic.svg#svgFontName') format('svg'); /* Legacy iOS */
-  font-weight: 400;
-  font-style: italic;
-}
-
-
-/* alt-font */
-// Alegreya Sans Regular
-@font-face {
-  font-family: 'Alegreya Sans';
-  src: url('fonts/AlegreyaSans-Regular.eot'); /* IE9 Compat Modes */
-  src: url('fonts/AlegreyaSans-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/AlegreyaSans-Regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/AlegreyaSans-Regular.woff') format('woff'), /* Pretty Modern Browsers */
-       url('fonts/AlegreyaSans-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('fonts/AlegreyaSans-Regular.svg#svgFontName') format('svg'); /* Legacy iOS */
-  font-weight: 400;
-  font-style: normal;
-}
-
-// Alegreya Sans Italic
-@font-face {
-  font-family: 'Alegreya Sans';
-  src: url('fonts/AlegreyaSans-Italic.eot'); /* IE9 Compat Modes */
-  src: url('fonts/AlegreyaSans-Italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/AlegreyaSans-Italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/AlegreyaSans-Italic.woff') format('woff'), /* Pretty Modern Browsers */
-       url('fonts/AlegreyaSans-Italic.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('fonts/AlegreyaSans-Italic.svg#svgFontName') format('svg'); /* Legacy iOS */
-  font-weight: 400;
-  font-style: italic;
-}
-
-// Alegreya Sans Bold
-@font-face {
-  font-family: 'Alegreya Sans';
-  src: url('fonts/AlegreyaSans-Bold.eot'); /* IE9 Compat Modes */
-  src: url('fonts/AlegreyaSans-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/AlegreyaSans-Bold.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/AlegreyaSans-Bold.woff') format('woff'), /* Pretty Modern Browsers */
-       url('fonts/AlegreyaSans-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('fonts/AlegreyaSans-Bold.svg#svgFontName') format('svg'); /* Legacy iOS */
-  font-weight: 700;
-  font-style: normal;
-}
-
-// Alegreya Sans Bold Italic
-@font-face {
-  font-family: 'Alegreya Sans';
-  src: url('fonts/AlegreyaSans-BoldItalic.eot'); /* IE9 Compat Modes */
-  src: url('fonts/AlegreyaSans-BoldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/AlegreyaSans-BoldItalic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/AlegreyaSans-BoldItalic.woff') format('woff'), /* Pretty Modern Browsers */
-       url('fonts/AlegreyaSans-BoldItalic.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('fonts/AlegreyaSans-BoldItalic.svg#svgFontName') format('svg'); /* Legacy iOS */
+  font-family: 'Space Mono';
+  src: url('fonts/SpaceMono-BoldItalic.eot'); /* IE9 Compat Modes */
+  src: url('fonts/SpaceMono-BoldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/SpaceMono-BoldItalic.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/SpaceMono-BoldItalic.woff') format('woff'), /* Pretty Modern Browsers */
+       url('fonts/SpaceMono-BoldItalic.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('fonts/SpaceMono-BoldItalic.svg#svgFontName') format('svg'); /* Legacy iOS */
   font-weight: 700;
   font-style: italic;
 }
+
+// // Extra Bold Italic
+// @font-face {
+//   font-family: 'Libre Franklin';
+//   src: url('fonts/LibreFranklin-ExtraBoldItalic.eot'); /* IE9 Compat Modes */
+//   src: url('fonts/LibreFranklin-ExtraBoldItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//        url('fonts/LibreFranklin-ExtraBoldItalic.woff2') format('woff2'), /* Super Modern Browsers */
+//        url('fonts/LibreFranklin-ExtraBoldItalic.woff') format('woff'), /* Pretty Modern Browsers */
+//        url('fonts/LibreFranklin-ExtraBoldItalic.ttf')  format('truetype'), /* Safari, Android, iOS */
+//        url('fonts/LibreFranklin-ExtraBoldItalic.svg#svgFontName') format('svg'); /* Legacy iOS */
+//   font-weight: 800;
+//   font-style: italic;
+// }
+
+// // Black
+// @font-face {
+//   font-family: 'Libre Franklin';
+//   src: url('fonts/LibreFranklin-Black.eot'); /* IE9 Compat Modes */
+//   src: url('fonts/LibreFranklin-Black.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//        url('fonts/LibreFranklin-Black.woff2') format('woff2'), /* Super Modern Browsers */
+//        url('fonts/LibreFranklin-Black.woff') format('woff'), /* Pretty Modern Browsers */
+//        url('fonts/LibreFranklin-Black.ttf')  format('truetype'), /* Safari, Android, iOS */
+//        url('fonts/LibreFranklin-Black.svg#svgFontName') format('svg'); /* Legacy iOS */
+//   font-weight: 900;
+//   font-style: normal;
+// }
+
+// // Black Italic
+// @font-face {
+//   font-family: 'Libre Franklin';
+//   src: url('fonts/LibreFranklin-BlackItalic.eot'); /* IE9 Compat Modes */
+//   src: url('fonts/LibreFranklin-BlackItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//        url('fonts/LibreFranklin-BlackItalic.woff2') format('woff2'), /* Super Modern Browsers */
+//        url('fonts/LibreFranklin-BlackItalic.woff') format('woff'), /* Pretty Modern Browsers */
+//        url('fonts/LibreFranklin-BlackItalic.ttf')  format('truetype'), /* Safari, Android, iOS */
+//        url('fonts/LibreFranklin-BlackItalic.svg#svgFontName') format('svg'); /* Legacy iOS */
+//   font-weight: 900;
+//   font-style: italic;
+// }
 
 
 /* monospace-font */
-// Liberation Mono Regular
+// Regular
 @font-face {
-  font-family: 'Liberation Mono';
-  src: url('fonts/LiberationMono-Regular.eot'); /* IE9 Compat Modes */
-  src: url('fonts/LiberationMono-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/LiberationMono-Regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/LiberationMono-Regular.woff') format('woff'), /* Pretty Modern Browsers */
-       url('fonts/LiberationMono-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('fonts/LiberationMono-Regular.svg#svgFontName') format('svg'); /* Legacy iOS */
+  font-family: 'Space Mono';
+  src: url('fonts/SpaceMono-Regular.eot'); /* IE9 Compat Modes */
+  src: url('fonts/SpaceMono-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('fonts/SpaceMono-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('fonts/SpaceMono-Regular.woff') format('woff'), /* Pretty Modern Browsers */
+       url('fonts/SpaceMono-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('fonts/SpaceMono-Regular.svg#svgFontName') format('svg'); /* Legacy iOS */
   font-weight: 400;
   font-style: normal;
 }
