--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,9 +1,9 @@
 .wrapper-masthead {
-  margin-bottom: 2em;
+  margin-bottom: 2.4rem;
 }
 
 .masthead {
-  padding: 1em 0;
+  padding: 2.4rem 0 1.6rem;
 
   @include breakpoint-s {
     text-align: center;
@@ -39,18 +39,18 @@
 
 .site-name {
   margin: 0;
-  color: $darkGray;
+  color: $text-color;
   cursor: pointer;
   font-family: $display-font;
   font-weight: 300;
-  font-size: 28px;
+  font-size: 2.4rem;
   letter-spacing: 1px;
 }
 
 .site-description {
   margin: -5px 0 0 0;
-  color: $gray;
-  font-size: 16px;
+  color: $text-color--lighter;
+  font-size: 1.6rem;
 
   @include breakpoint-s {
     margin: 3px 0;
