--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -1,9 +1,10 @@
 .index > .post {
-  margin: 0 0 1em;
+  margin: 0 0 2.4rem;
 }
 
 .post-title--index {
-  font-size: 1em;
+  padding: 0 0 0.4rem;
+  // font-size: 2.4rem;
 
   a {
     color: $text-color;
@@ -22,8 +23,4 @@
       text-decoration: none;
     }
   }
-}
-
-.post-date--index {
-    margin: 0;
 }
