--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,15 +15,15 @@
 
   <body>
     <div class="wrapper-masthead">
-      <div class="container">
+      <div class="container container-masthead">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}"/></a>
-
           <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <h2 class="site-description">{{ site.description }}</h2>
+            <a href="{{ site.baseurl }}/">
+              <img class="site-avatar" src="/images/AltEscape_Avatar_neg.png">
+              <h1 class="site-name">{{ site.name }}</h1>
+              <h2 class="site-description">{{ site.description }}</h2>
+            </a>
           </div>
-
           <nav>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
@@ -31,7 +31,7 @@
       </div>
     </div>
 
-    <div id="main" role="main" class="container">
+    <div id="main" role="main" class="container container-main">
       {{ content }}
     </div>
 
