--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,19 +1,13 @@
 
 .highlight {
   background-color: $lightest-color;
-  padding: 0.8rem;
-  margin:	0 0 1.6rem;
-  line-height: 1.2;
-  overflow: auto;
+  padding: 0.5rem 0.625rem;
+  margin:	0 0 1rem;
+  line-height: 1.4;
 
   code {
-  	font-size: 1.4rem;
+  	font-size: 1rem;
   }
-}
-
-code {
-  background-color: $lightest-color;
-  font-family: $mono-font;
 }
 
 .highlight .c { color: $highlight-color--light-grey } /* Comment */
