--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -5,7 +5,6 @@
 }
 
 .masthead {
-  padding: 1rem 0 0.875rem;
 
   @include breakpoint-s {
     text-align: center;
@@ -13,8 +12,9 @@
 }
 
 .site-info {
+  padding: 1rem 0;
   float: left;
-  width: 50%;
+  width: 33.334%;
 
   a {
     cursor: pointer;
@@ -51,26 +51,50 @@
   line-height: 1.2;
 }
 
-nav {
+.site-nav {
   float: right;
-  color: white;
-  font-size: 1rem;
 
   @include breakpoint-s {
     float: none;
     display: block;
   }
 
-  a {
-    text-align: right;
-    color: white;
-  }
-
   ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
 
     li {
-      display: inline;
+      display: inline-block;
+      margin: 0;
+      padding: 0;
+
+      &:last-child {
+        margin-left: 0.5rem; 
+        padding-left: 0.5rem;
+        border-left: 1px solid $dark-color;
+      }
+
+      a {
+        display: inline-block;
+        padding: 0 0.375rem;
+        color: $light-color;
+        font-size: 0.875rem;
+        line-height: 4.5rem;
+        border: none;
+
+        &:hover {
+          color: white;
+          background: none;
+          border: none;
+        }
+
+        &:active {
+          color: $medium-color;
+          background: none;
+          border: none;
+        }
+      }
     }
   }
 }
