--- a/style.scss
+++ b/style.scss
@@ -6,11 +6,13 @@
 @import "variables";
 @import "fonts";
 @import "base";
+@import "typography";
 @import "header";
 @import "post";
 @import "index";
 @import "page";
 @import "footer";
+@import "images";
 @import "utilities";
 @import "highlights";
 @import "svg-icons";
