--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,11 @@
 ---
 layout: default
 ---
-
-
 <!-- Post DOM -->
 <article class="post">
   <div class="post-header">
     <h1 class="post-title"><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h1>
-    <h2 class="post-subtitle">{{ post.subtitle }}</h2>
+    <h2 class="post-subtitle">{{ page.subtitle }}</h2>
     <div class="post-date">{{ page.date | date: "%e %B %Y" }} - {{ page.date | date: "%H:%M" }}</div>
   </div>
   <div class="entry">
@@ -22,6 +20,7 @@ layout: default
         {% endfor %}
       </div>
     {% endif %}
+    {% if page.tags.size > 0 %}
     <div class="post-tags">
       <h1>Tags</h1>
       <p>
@@ -30,5 +29,6 @@ layout: default
       {% endfor %}
       </p>
     </div>
+    {% endif %}
   </div>
 </article>
