--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -1,15 +1,13 @@
 ---
 layout: default
 ---
-<h1>{{ page.category | capitalize | replace: "-", " " }}</h1>
-<div>
-  {% if site.categories[page.category] %}
-  <ul>
-    {% for post in site.categories[page.category] %}
-      <li><a href="{{ post.url }}/">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-  {% else %}
-    <p>Aucun post n'appartient à la catégorie {{ page.category }}</p>
-  {% endif %}
-</div>
+<!-- Catergory index DOM -->
+
+<h1 class="page-title">{{ page.category | capitalize | replace: "-", " " }}</h1>
+{% if site.categories[page.category] %}
+  {% for post in site.categories[page.category] %}
+		{% include post-header.html %}
+  {% endfor %}
+{% else %}
+  <p>Aucun post n'appartient à la catégorie {{ page.category }}</p>
+{% endif %}
