--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -1,15 +1,12 @@
 ---
 layout: default
 ---
-<h1>{{ page.tag }}</h1>
-<div>
-  {% if site.tags[page.tag] %}
-  <ul>
-    {% for post in site.tags[page.tag] %}
-      <li><a href="{{ post.url }}/">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-  {% else %}
-    <p>Aucun post n'utilise le tag {{ page.tag }}</p>
-  {% endif %}
-</div>
+<!-- Tag index DOM -->
+<h1 class="page-title">{{ page.tag }}</h1>
+{% if site.tags[page.tag] %}
+  {% for post in site.tags[page.tag] %}
+    {% include post-header.html %}
+  {% endfor %}
+{% else %}
+  <p>Aucun post n'utilise le tag {{ page.tag }}</p>
+{% endif %}
