--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -43,7 +43,7 @@
 /* Post Metadata */
 // Wrapper
 .post-metadata {
-  margin: 4rem 0 6rem;
+  margin: 4rem 0 0;
   padding: 1rem 0 0;
   border-top: 1px dotted $medium-color;
 
