--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -17,3 +17,9 @@ hr {
   border: 0;
   border-bottom: 1px dotted $medium-color;
 }
+
+/* Alignment */
+// align right
+.util__float-right {
+	float: right;
+}
