--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,8 +1,10 @@
 .wrapper-footer {
-  margin-top: 1em;
-}
+  margin-top: 6rem;
+  padding: 1rem 0 0.5rem;
+  font-size: 0.8125rem; // 13px
+  border-top: 1px dotted $lightest-color;
 
-footer {
-  padding: 1em 0;
-  text-align: center;
+  p {
+  	display: inline-block;
+  }
 }
