--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,21 +2,19 @@
 <html>
   <head>
     <title>æ - {% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
-
     {% include meta.html %}
-
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
   </head>
   
   <body>
+    <!-- Header -->
     <div class="wrapper-masthead">
       <div class="container container-masthead">
-        <header class="masthead clearfix">
+        <header class="clearfix">
           <div class="site-info">
             <a href="{{ site.baseurl }}/">
               <img class="site-avatar" src="/images/AltEscape_SiteHeader_40px_neg@3x.png">
@@ -35,11 +33,11 @@
         </header>
       </div>
     </div>
-
+    <!-- Content -->
     <div id="main" role="main" class="container container-main">
       {{ content }}
     </div>
-
+    <!-- Footer -->
     <div class="wrapper-footer">
       <div class="container container-footer">
         <footer>
@@ -49,7 +47,6 @@
         </footer>
       </div>
     </div>
-
     {% include analytics.html %}
   </body>
 </html>
