--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -2,7 +2,7 @@
   margin-top: 6rem;
   padding: 1rem 0 1rem;
   font-size: 0.8125rem; // 13px
-  border-top: 1px dotted $lightest-color;
+  border-top: 1px dashed $lightest-color;
 
   p {
   	display: inline-block;
