Feature/Style - Home page refactoring
- added introduction section
- added 3 most recent posts
- added 5 most used tags (WIP)

--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -8,5 +8,5 @@ layout: default
 		{% include post-header.html %}
   {% endfor %}
 {% else %}
-  <p>Aucun post n'appartient à la catégorie {{ page.category }}</p>
+  <p>Aucun post n'appartient à la catégorie <strong>{{ page.category | capitalize | replace: "-", " " }}</strong></p>
 {% endif %}
