--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -8,5 +8,5 @@ layout: default
     {% include post-header.html %}
   {% endfor %}
 {% else %}
-  <p>Aucun post n'utilise le tag {{ page.tag }}</p>
+  <p>Aucun post n'utilise le tag <strong>{{ page.tag }}</strong></p>
 {% endif %}
