--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,11 +1,8 @@
 ---
 layout: default
 ---
-
 <article class="page">
-
-  <h1 class="title"><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h1>
-
+  <h1 class="page-title">{{ page.title }}</h1>
   <div class="entry">
     {{ content }}
   </div>
