--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ layout: default
       <h1>Tags</h1>
       <p>
       {% for tag in page.tags %}
-        <a href="/tags/{{ tag }}/">{{ tag }}</a></li>
+        <a href="/tags/{{ tag }}/">{{ tag }}</a>
       {% endfor %}
       </p>
     </div>
